--- a/index.html
+++ b/index.html
@@ -149,10 +149,20 @@
       <h2 class="title__feedbek">ОТЗЫВЫ</h2>
       <div class="form-wrap">
         <form class="form-feed">
-          <button class="feed-btn">Оставить отзыв Яндекс</button>
+          <button class="feed-btn">
+            <a
+              href="https://yandex.ru/maps/org/magiya_iskusstva/1006427653/reviews/?ll=37.281546%2C55.685137&z=14"
+              >Оставить отзыв Яндекс</a
+            >
+          </button>
         </form>
         <form class="form-feed2">
-          <button class="feed-btn2">Оставить отзыв Zoon</button>
+          <button class="feed-btn2">
+            <a
+              href="https://zoon.ru/msk/beauty/salon_krasoty_magiya_iskusstva/#reviews"
+              >Оставить отзыв Zoon</a
+            >
+          </button>
         </form>
       </div>
 
