--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Magiskus</title>
 
-    <script type="module" src="./slider.js" defer></script>
-    <script type="module" src="./modal.js" defer></script>
     <script type="module" src="./main.js" defer></script>
   </head>
   <body>
@@ -98,7 +96,7 @@
     </div>
 
     <div class="message"></div>
-    <section class="section">
+    <section class="section container">
       <div class="grid">
         <a class="item item__container" href="hair.html">
           <img
@@ -150,7 +148,7 @@
       </div>
     </section>
 
-    <div class="container__feedbek">
+    <div class="container__feedbek container">
       <h2 class="title__feedbek">ОТЗЫВЫ</h2>
       <div class="form-wrap">
         <form class="form-feed">
@@ -176,23 +174,19 @@
           <img
             class="image-feed"
             src="./public/Снимок экрана 2024-01-27 в 16.42.38.png"
-            width="400px"
-            height="400px"
             alt="" />
         </div>
         <div class="wrapp__image">
           <img
             class="image-feed"
             src="./public/Снимок экрана 2024-01-27 в 16.40.35.png"
-            width="400px"
-            height="400px"
             alt="" />
         </div>
       </div>
     </div>
 
     <h2 class="about__title">О Нас</h2>
-    <div class="about-us">
+    <div class="about-us container">
       <img
         class="image-us"
         src="./public/Снимок экрана 2024-02-03 в 14.20.12.png"
@@ -223,6 +217,4 @@
       </div>
     </footer>
   </body>
-
-  <script src="./main.js"></script>
 </html>
