--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Magiskus</title>
+    <script type="module" src="./main.js" defer></script>
   </head>
   <body>
     <header>
@@ -94,7 +95,7 @@
     </div>
 
     <div class="message"></div>
-    <section class="section">
+    <section class="section container">
       <div class="grid">
         <a class="item item__container" href="hair.html">
           <img
@@ -146,25 +147,31 @@
       </div>
     </section>
 
-    <div class="container__feedbek">
+    <div class="container__feedbek container">
       <h2 class="title__feedbek">ОТЗЫВЫ</h2>
       <div class="form-wrap">
-        <form class="form-feed">
+        <form class="form-feed link-feed">
           <button class="feed-btn">
             <a
               href="https://yandex.ru/maps/org/magiya_iskusstva/1006427653/reviews/?ll=37.281546%2C55.685137&z=14"
               >Оставить отзыв Яндекс</a
             >
           </button>
-        </form>
-        <form class="form-feed2">
-          <button class="feed-btn2">
+          <button class="feed-btn">
             <a
               href="https://zoon.ru/msk/beauty/salon_krasoty_magiya_iskusstva/#reviews"
               >Оставить отзыв Zoon</a
             >
           </button>
         </form>
+        <!-- <form class="form-feed2 link-feed">
+          <button class="feed-btn">
+            <a
+              href="https://zoon.ru/msk/beauty/salon_krasoty_magiya_iskusstva/#reviews"
+              >Оставить отзыв Zoon</a
+            >
+          </button>
+        </form> -->
       </div>
 
       <div class="wrapp">
@@ -172,23 +179,19 @@
           <img
             class="image-feed"
             src="./public/Снимок экрана 2024-01-27 в 16.42.38.png"
-            width="400px"
-            height="400px"
             alt="" />
         </div>
         <div class="wrapp__image">
           <img
             class="image-feed"
             src="./public/Снимок экрана 2024-01-27 в 16.40.35.png"
-            width="400px"
-            height="400px"
             alt="" />
         </div>
       </div>
     </div>
 
     <h2 class="about__title">О Нас</h2>
-    <div class="about-us">
+    <div class="about-us container">
       <img
         class="image-us"
         src="./public/Снимок экрана 2024-02-03 в 14.20.12.png"
@@ -219,6 +222,4 @@
       </div>
     </footer>
   </body>
-
-  <script src="./main.js"></script>
 </html>
