--- a/depel.html
+++ b/depel.html
@@ -7,42 +7,64 @@
     <link rel="stylesheet" href="./price.css" />
     <title>Depel</title>
   </head>
+
   <body>
-    <h1>Гладкость и легкость</h1>
+    <h1 class="price-header">Для Мужчин</h1>
 
     <div class="price-list">
-      <div>Глубокое бикини (90 мин)</div>
-      <div>2800</div>
+      <div class="item"><b>Мужская</b> стрижка</div>
+      <div class="price">2200</div>
+      <div class="item"><b>Мужская стрижка</b> Топ</div>
 
-      <div>Классическое бикини (60 мин)</div>
-      <div>2000</div>
+      <div class="price">4000</div>
+      <div class="item"><b>Маникюр</b> Мужской</div>
+      <div class="price">1500</div>
 
-      <div>Подмышки (60 мин)</div>
-      <div>800</div>
-
-      <div>Лицо - верхняя губа (20 мин)</div>
-      <div>500</div>
-
-      <div>Голень (30 мин)</div>
-      <div>1200</div>
-
-      <div>Бёдра (30 мин)</div>
-      <div>1200</div>
-
-      <div>Ноги полностью (30 мин)</div>
-      <div>2300</div>
-
-      <div>Руки до локтя (30 мин)</div>
-      <div>1000</div>
-
-      <div>Руки полностью (30 мин)</div>
-      <div>1900</div>
-
-      <div>Спина (60 мин)</div>
-      <div>2000</div>
-
-      <div>Лицо - волос на щеках</div>
-      <div>1200</div>
+      <div class="item"><b>Покрытие</b> Матовое для мужчин</div>
+      <div class="price">100</div>
+      <div class="item"><b>Педикюр</b> Голден Тресс</div>
+      <div class="price">3400 руб</div>
+      <div class="item"><b>Педикюр Экспресс </b> (только пальчики)</div>
+      <div class="price">2000 руб</div>
+      <div class="item"><b>Классическое SPA всего тела</b> 1.5ч</div>
+      <div class="price">4000</div>
+      <div class="item"><b>Классическое SPA всего тела</b> 1 ч</div>
+      <div class="price">3500</div>
+      <div class="item"><b>Массаж спины</b> 45 мин</div>
+      <div class="price">2000</div>
+      <div class="item">
+        <b>Чистка лица</b> Ультразвуковая (90 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>чистка ультразвуковая скрабером</i></div>
+        <div><i>маска поросуживающая</i></div>
+      </div>
+      <div class="price">3000</div>
+      <div class="item">
+        <b>Чистка лица</b> Атравматическая (90 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>маска пилинг</i></div>
+        <div><i>чистка ультразвуковая скрабером</i></div>
+        <div><i>маска по типу кожи</i></div>
+      </div>
+      <div class="price">4500</div>
+      <div class="item">
+        <b>Чистка лица</b> Механическая (120 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>чистка </i></div>
+        <div><i>маска успокаивающая</i></div>
+      </div>
+      <div class="price">4500</div>
+      <div class="item">
+        <b>Чистка </b>спины (120 мин)
+        <div><i>очищение</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i> механическая чистка</i></div>
+        <div><i>маска успокаивающая</i></div>
+      </div>
     </div>
+    <script></script>
   </body>
 </html>
