--- a/face.html
+++ b/face.html
@@ -8,58 +8,157 @@
     <title>Face</title>
   </head>
   <body>
-    <h1>Сияние лица</h1>
+    <h1 class="header">Сияние и гладкость кожи</h1>
+
+    <div class="image__price">
+      <img src="./public/_ (4).jpeg" alt="" />
+    </div>
 
     <div class="price-list">
-      <div>Массаж лица</div>
-      <div>3500 руб</div>
-      <div>Ингибитор жира лицо</div>
-      <div>1000 руб</div>
-      <div>Чистка лица «Сияющая кожа» (90 мин)</div>
-      <div>4500</div>
-      <div>Уход классический «Цвет и молодость» (60 мин)</div>
-      <div>4500</div>
-      <div>Уход «Биплазма oGi Gi» (60 мин)</div>
-      <div>4500</div>
+      <div class="item"><b>Массаж </b>лица</div>
+      <div class="price">3500 руб</div>
+      <div class="item"><b>Ингибитор жира</b> лицо</div>
+      <div class="price">1000 руб</div>
+      <div class="item">
+        <b>Чистка лица</b> Ультразвуковая (90 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>чистка ультразвуковая скрабером</i></div>
+        <div><i>маска поросуживающая</i></div>
+      </div>
+      <div class="price">3000</div>
+      <div class="item">
+        <b>Чистка лица</b> Атравматическая (90 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>маска пилинг</i></div>
+        <div><i>чистка ультразвуковая скрабером</i></div>
+        <div><i>маска по типу кожи</i></div>
+      </div>
+      <div class="price">4500</div>
+      <div class="item">
+        <b>Чистка лица</b> Механическая (120 мин)
+        <div><i>демакияж</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i>чистка </i></div>
+        <div><i>маска успокаивающая</i></div>
+      </div>
+      <div class="price">4500</div>
+      <div class="item">
+        <b>Чистка </b>спины (120 мин)
+        <div><i>очищение</i></div>
+        <div><i>маска холодного гидрирования</i></div>
+        <div><i> механическая чистка</i></div>
+        <div><i>маска успокаивающая</i></div>
+      </div>
+      <div class="price">6000</div>
+      <div class="item">
+        <b>Уходовая программа « Сияющая кожа» </b>(90 мин)
+        <div><i>демакияж</i></div>
+        <div><i>массаж лица</i></div>
+        <div><i>сыворотка</i></div>
+        <div><i>маска</i></div>
+        <div><i>финишный крем</i></div>
+      </div>
 
-      <div>Уход за глазами (30 мин)</div>
-      <div>2500</div>
+      <div class="price">4500</div>
+      <div class="item">
+        <b>Уходовая программа «Цвет и молодость»</b> (60 мин)
+        <div><i>демакияж</i></div>
+        <div><i>скраб</i></div>
+        <div><i>сыворотка</i></div>
+        <div><i>маска с боттолоэффектом</i></div>
+        <div><i>финальный крем с тонирующим эффектом</i></div>
+      </div>
+      <div class="price">4500</div>
 
-      <div>Миофасциальный Массаж лица (60 мин)</div>
-      <div>3000</div>
+      <div class="item">
+        <b> Уход за глазами </b>(30 мин)
+        <div><i>очищающий гель</i></div>
+        <div><i>пилинг для глаз</i></div>
+        <div><i>маска увлажняющая</i></div>
+        <div><i>крем для глаз</i></div>
+        <div><i>увлажняющий крем</i></div>
+      </div>
+      <div class="price">2500</div>
+      <div class="item">
+        <b>Миофасцифальный Массаж</b> лица (60 мин)
+        <div><i> демакияж</i></div>
+        <div><i>массажное средство</i></div>
+      </div>
+      <div class="price">3000</div>
+      <div class="item">
+        <b>Лимфодренажный Массаж</b> лица (60 мин)
 
-      <div>ПИЛИНГ PRX t 33</div>
-      <div>6000</div>
+        <div><i>демакияж</i></div>
+        <div><i>массажное средство</i></div>
+        <div><i>маска альгинатная</i></div>
+      </div>
+      <div class="price">3600</div>
 
-      <div>ПИЛИНГ Bio Re Pee</div>
-      <div>5500</div>
+      <div class="item"><b>ПИЛИНГ</b> PRX t 33</div>
+      <div class="price">6000</div>
 
-      <div>ПИЛИНГ PQ age</div>
-      <div>4500</div>
+      <div class="item"><b>ПИЛИНГ</b>Bio Re Pee</div>
+      <div class="price">5500</div>
 
-      <div>ПИЛИНГ Осветляющий</div>
-      <div>7000</div>
+      <div class="item"><b>ПИЛИНГ</b> PQ age</div>
+      <div class="price">4500</div>
 
-      <div>Миндальный (поверхностный)</div>
-      <div>3500</div>
+      <div class="item"><b>ПИЛИНГ</b>Осветляющий</div>
+      <div class="price">7000</div>
 
-      <div>Мультипилинг (средне-поверхностный)</div>
-      <div>3500</div>
+      <div class="item"><b>Миндальный</b> (поверхностный)</div>
+      <div class="price">3500</div>
 
-      <div>ПИЛИНГ Молочный (поверхностный)</div>
-      <div>3500</div>
+      <div class="item"><b>Мультипилинг </b>(средне-поверхностный)</div>
+      <div class="price">3500</div>
 
-      <div>ПИЛИНГ Салициловый</div>
-      <div>3500</div>
+      <div class="item"><b>ПИЛИНГ</b> Молочный (поверхностный)</div>
+      <div class="price">3500</div>
 
-      <div>ПИЛИНГ Гликолевый (поверхностно-серединный)</div>
-      <div>3500</div>
+      <div class="item"><b>ПИЛИНГ</b> Салициловый</div>
+      <div class="price">3500</div>
 
-      <div>ПИЛИНГ Ретиноловый (Желтый) (серединный,Анти возраст)</div>
-      <div>4500</div>
+      <div class="item"><b>ПИЛИНГ</b> Гликолевый (поверхностно-серединный)</div>
+      <div class="price">3500</div>
 
-      <div>ПИЛИНГ ТСА (отшелушивающий)</div>
-      <div>6000</div>
+      <div class="item">
+        <b>ПИЛИНГ</b> Ретиноловый (Желтый) (серединный,Анти возраст)
+      </div>
+      <div class="price">4500</div>
+
+      <div class="item"><b>ПИЛИНГ</b> ТСА (отшелушивающий)</div>
+      <div class="price">6000</div>
+      <div class="item"><b>Глубокое</b> бикини</div>
+      <div class="price">2800</div>
+
+      <div class="item"><b>Классическое</b> бикини</div>
+      <div class="price">2000</div>
+
+      <div class="item"><b>Подмышки</b></div>
+      <div class="price">800</div>
+
+      <div class="item"><b>Лицо</b></div>
+      <div class="price">500</div>
+
+      <di class="item"> <b>Голень </b></di>
+      <div class="price">1200</div>
+
+      <div class="item"><b>Бёдра</b></div>
+      <div class="price">1200</div>
+
+      <div class="item"><b>Ноги</b> полностью</div>
+      <div class="price">2300</div>
+
+      <div class="item"><b>Руки</b> до локтя</div>
+      <div class="price">1000</div>
+
+      <div class="item"><b>Руки</b> полностью</div>
+      <div class="price">1900</div>
+
+      <div class="item"><b>Спина</b></div>
+      <div class="price">2000</div>
     </div>
   </body>
 </html>
