--- a/makeup.html
+++ b/makeup.html
@@ -8,50 +8,29 @@
     <title>Make up</title>
   </head>
   <body>
-    <h1>Стиль без повода</h1>
+    <h1 class="price-header">Стиль без повода</h1>
+    <div class="image__price">
+      <img src="./public/_ (6).jpeg" alt="" />
+    </div>
     <div class="price-list">
-      <div>Макияж дневной</div>
-      <div>3000 руб</div>
-      <div>Макияж вечерний</div>
-      <div>3500 руб</div>
-      <div>Ламинирование ресниц</div>
-      <div>4000 руб</div>
+      <div class="item"><b>Макияж</b> дневной</div>
+      <div class="price">3000 руб</div>
+      <div class="item"><b>Макияж</b> вечерний</div>
+      <div class="price">3500 руб</div>
+      <div class="item"><b>Ламинирование </b>ресниц</div>
+      <div class="price">4000 руб</div>
 
-      <div>Наращивание ресниц классика</div>
-      <div>3300 руб</div>
-      <div>Наращивание ресниц 1.5D</div>
-      <div>3500 руб</div>
+      <div class="item"><b>Окрашивание </b>ресниц (краска)</div>
+      <div class="price">500 руб</div>
 
-      <div>Наращивание ресниц 2D</div>
-      <div>4000 руб</div>
-      <div>Наращивание ресниц 2.5D</div>
-      <div>4300 руб</div>
+      <div class="item"><b>Окрашивание </b>бровей (хна)</div>
+      <div class="price">600 руб</div>
 
-      <div>Наращивание ресниц 3D</div>
-      <div>4500 руб</div>
+      <div class="item"><b>Коррекция</b> бровей</div>
+      <div class="price">600 руб</div>
 
-      <div>Наращивание ресниц Голливудское</div>
-      <div>5000 руб</div>
-
-      <div>Пучки ресниц</div>
-      <div>600 руб</div>
-
-      <div>Коррекция ресниц</div>
-      <div>2500 руб</div>
-      <div>Снятие ресниц</div>
-      <div>500 руб</div>
-
-      <div>Окрашивание ресниц (краска)</div>
-      <div>500 руб</div>
-
-      <div>Окрашивание бровей (хна)</div>
-      <div>600 руб</div>
-
-      <div>Коррекция бровей</div>
-      <div>600 руб</div>
-
-      <div>Форма бровей</div>
-      <div>600 руб</div>
+      <div class="item"><b>Форма</b> бровей</div>
+      <div class="price">600 руб</div>
     </div>
   </body>
 </html>
