--- a/nail.html
+++ b/nail.html
@@ -8,78 +8,76 @@
     <title>Ногти</title>
   </head>
   <body>
-    <h1>Аккуратные пальцы</h1>
+    <h1 class="price-header">Аккуратные пальцы</h1>
+    <div class="image__price">
+      <img
+        src="./public/ФОНЫ _ ВИДЕО _ БЬЮТИ (вдохновение и эстетика).jpeg "
+        width="450px"
+        height="400px"
+        alt="" />
+    </div>
     <div class="price-list">
-      <div>Педикюр Голден Тресс</div>
-      <div>3400 руб</div>
-      <div>Педикюр Экспресс (только пальчики)</div>
-      <div>2000 руб</div>
-      <div>Снятие Лак</div>
-      <div>300 руб</div>
-      <div>Снятие Гель-лак</div>
-      <div>300 руб</div>
-      <div>Покрытие Лак</div>
-      <div>500 руб</div>
+      <div class="item"><b>Педикюр</b> Голден Тресс</div>
+      <div class="price">3400 руб</div>
+      <div class="item"><b>Педикюр Экспресс </b> (только пальчики)</div>
+      <div class="price">2000 руб</div>
+      <div class="item"><b>Снятие</b> Лак</div>
+      <div class="price">300 руб</div>
+      <div class="item"><b>Снятие</b> Гель-лак</div>
+      <div class="price">300 руб</div>
+      <div class="item"><b>Покрытие</b> Лак</div>
+      <div class="price">500 руб</div>
 
-      <div>Покрытие Лак</div>
-      <div>500 руб</div>
+      <div class="item"><b>Покрытие</b> Лечебный лак</div>
+      <div class="price">500 руб</div>
 
-      <div>Покрытие Лечебный лак</div>
-      <div>500 руб</div>
+      <div class="item"><b>Покрытие</b> Гель-лак</div>
+      <div class="price">1400 руб</div>
 
-      <div>Покрытие Гель-лак</div>
-      <div>1400 руб</div>
+      <div class="item"><b>Покрытие</b> Френч</div>
+      <div class="price">1700 руб</div>
 
-      <div>Покрытие Френч</div>
-      <div>1700 руб</div>
+      <div class="item"><b>Ремонт</b> Натурального ногтя</div>
+      <div class="price">500 руб</div>
 
-      <div>Ремонт Натурального ногтя</div>
-      <div>500 руб</div>
+      <div class="item"><b>Ремонт</b> Наращённого ногтя</div>
+      <div class="price">500</div>
 
-      <div>Ремонт Наращённого ногтя</div>
-      <div>500 руб</div>
+      <div class="item"><b>Наращивание</b> ногтей</div>
+      <div class="price">4000</div>
 
-      <div>Наращивание ногтей</div>
-      <div>4000 руб</div>
+      <div class="item"><b>Покрытие</b> гель-лак LUXIO</div>
+      <div class="price">1900</div>
 
-      <div>Покрытие гель-лак LUXIO</div>
-      <div>1900 руб</div>
+      <div class="item"><b>Процедура СПА </b>(парафин)</div>
+      <div class="price">1000</div>
 
-      <div>Процедура СПА (парафин)</div>
-      <div>1000 руб</div>
+      <div class="item"><b>Маникюр</b> Экспресс</div>
+      <div class="price">600</div>
 
-      <div>Маникюр Экспресс</div>
-      <div>600 руб</div>
+      <div class="item"><b>Маникюр</b> Комбинированный</div>
+      <div class="price">1500</div>
 
-      <div>Маникюр Комбинированный</div>
-      <div>1500 руб</div>
+      <div class="item"><b>Маникюр</b> Для маленьких принцесс</div>
+      <div class="price">600</div>
 
-      <div>Маникюр Мужской</div>
-      <div>1500 руб</div>
+      <div class="item"><b>Покрытие</b> Базовое под лак</div>
+      <div class="price">100</div>
 
-      <div>Маникюр Для маленьких принцесс</div>
-      <div>600 руб</div>
+      <div class="item"><b>Покрытие</b> Закрепитель</div>
+      <div class="price">100</div>
 
-      <div>Базовое под лак</div>
-      <div>100 руб</div>
+      <div class="item"><b>Дизайн</b></div>
+      <div class="price">500</div>
 
-      <div>Закрепитель</div>
-      <div>100 руб</div>
+      <div class="item"><b>Укрепление</b> натуральных ногтей Биогель</div>
+      <div class="price">500</div>
 
-      <div>Матовое для мужчин</div>
-      <div>100 руб</div>
+      <div class="item"><b>Укрепление</b>> натуральных ногтей База</div>
+      <div class="price">500</div>
 
-      <div>Дизайн</div>
-      <div>500 руб</div>
-
-      <div>Укрепление натуральных ногтей Биогель</div>
-      <div>500 руб</div>
-
-      <div>Укрепление натуральных ногтей База</div>
-      <div>500 руб</div>
-
-      <div>Укрепление натуральных ногтей Акрил</div>
-      <div>500 руб</div>
+      <div class="item"><b>Укрепление</b> натуральных ногтей Акрил</div>
+      <div class="price">500</div>
     </div>
   </body>
 </html>
