--- a/priceBody.html
+++ b/priceBody.html
@@ -5,41 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./price.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Price Page</title>
   </head>
+
   <body>
     <h1 class="price-header">Расслабление и перезагрузка</h1>
     <div class="price-list">
-      <div>Классическое SPA всего тела 1.5ч</div>
-      <div>4000 руб</div>
-      <div>Классическое SPA всего тела 1 ч</div>
-      <div>3500 руб</div>
-      <div>Массаж спины 45 мин</div>
-      <div>2000 руб</div>
-      <div>Массаж ноги + ягодицы 45 мин</div>
-      <div>2800 руб</div>
-      <div>Массаж шейно-воротниковой зоны</div>
-      <div>1800 руб</div>
-      <div>SPA медовый по зонам (1 парная зона)</div>
-      <div>1000 руб</div>
-      <div>SPA антицеллюлитный по зонам (1 парная зона)</div>
-      <div>2000 руб</div>
-      <div>Массаж релаксационный 1.5ч</div>
-      <div>4000 руб</div>
+      <div class="item"><b>Классическое SPA всего тела</b> 1.5ч</div>
+      <div class="price">4000</div>
+      <div class="item"><b>Классическое SPA всего тела</b> 1 ч</div>
+      <div class="price">3500</div>
+      <div class="item"><b>Массаж спины</b> 45 мин</div>
+      <div class="price">2000</div>
+      <div class="item"><b>Массаж ноги + ягодицы</b> 45 мин</div>
+      <div class="price">2800</div>
 
-      <div>Массаж релаксационный 1ч</div>
-      <div>3000 руб</div>
-      <div>Программа SPA (массаж, пилинг, обертывание)</div>
-      <div>6000 руб</div>
-      <div>Спортивный массаж</div>
-      <div>4000 руб</div>
-      <div>Ингибитор жира 1 зона тела</div>
-      <div>2000 руб</div>
+      <div class="item">
+        <b>SPA антицеллюлитный по зонам</b> (1 парная зона)
+      </div>
+      <div class="price">2000</div>
 
-      <div>SPA живот+руки+спина 1ч</div>
-      <div>2500 руб</div>
-      <div>Лимфодренаж ног</div>
-      <div>2500 руб</div>
+      <div class="item"><b>Спортивный массаж</b> 1 час</div>
+      <div class="price">4000</div>
+
+      <div class="item"><b>Лимфодренаж ног</b></div>
+      <div class="price">2500</div>
     </div>
   </body>
 </html>
