--- a/hair.html
+++ b/hair.html
@@ -9,294 +9,244 @@
   </head>
   <body>
     <h1 class="price-header">Шикарные и здоровые волосы</h1>
+    <div class="image__price">
+      <img
+        src="./public/Lyndall Jarvis by Olivier999 on DeviantArt.jpeg"
+        width="100%"
+        alt="" />
+    </div>
     <div class="price-list">
-      <div>Стрижка женская (мытье+укладка) топ-стилист Ирина Бабкина</div>
-      <div>8000</div>
+      <div class="item"><b>Стрижка женская</b> (мытье+укладка) Топ</div>
+      <div class="price">8000</div>
 
-      <div>Стрижка женская (мытье+укладка) топ-мастер Карина</div>
-      <div>3500</div>
+      <div class="item"><b>Стрижка для девочки</b> (до 8 лет) Топ</div>
+      <div class="price">8000</div>
+      <div class="item"><b> Стрижка для мальчика</b> (до 8 лет) Топ</div>
+      <div class="price">4000</div>
 
-      <div>Стрижка женская (мытье+укладка) мастер Яна</div>
-      <div>3200</div>
+      <div class="item"><b>Стрижка женская</b> (мытье+укладка)</div>
+      <div class="price">3500</div>
 
-      <div>Стрижка челки</div>
-      <div>500</div>
+      <div class="item"><b>Стрижка</b> челки</div>
+      <div class="price">1000</div>
 
-      <div>Мужская стрижка топ-стилист Ирина Бабкина</div>
-      <div>4000</div>
+      <div class="item"><b>Стрижка детская</b> (до 8 лет)</div>
+      <div class="price">1500</div>
 
-      <div>Мужская стрижка</div>
-      <div>2200</div>
-      <div>Стрижка детская (до 8 лет)</div>
-      <div>1500</div>
-      <div>Стрижка для девочки (до 8 лет) топ-стилист Ирина Бабкина</div>
-      <div>8000</div>
-      <div>Стрижка для мальчика (до 8 лет) топ-стилист Ирина Бабкина</div>
-      <div>4000</div>
-      <div>Коррекция стрижки топ-стилист Ирина Бабкина</div>
-      <div>4000</div>
+      <div class="item"><b>Коррекция стрижки</b> Топ</div>
+      <div class="price">4000</div>
 
-      <div>Коррекция стрижки</div>
-      <div>2200</div>
-      <div>Стрижка концов по одной длине (без мытья, утюг, брашинг)</div>
-      <div>1600</div>
-      <div>Укладка феном Короткие</div>
-      <div>4000</div>
+      <div class="item"><b>Коррекция</b> стрижки</div>
+      <div class="price">2200</div>
+      <div class="item">
+        <b>Стрижка концов</b> по одной длине (без мытья, утюг, брашинг)
+      </div>
+      <div class="price">1600</div>
+      <div class="item"><b>Укладка феном </b>Короткие</div>
+      <div class="price">4000</div>
 
-      <div>Укладка феном Средние</div>
-      <div>2300</div>
+      <div class="item"><b>Укладка феном </b> Средние</div>
+      <div class="price">2300</div>
 
-      <div>Укладка феном Длинные</div>
-      <div>3000</div>
+      <div class="item"><b>Укладка феном </b> Длинные</div>
+      <div class="price">3000</div>
 
-      <div>Укладка феном От 45 см.</div>
-      <div>3500</div>
+      <div class="item"><b>Укладка феном </b> От 45 см.</div>
+      <div class="price">3500</div>
 
-      <div>При использовании утюжка</div>
-      <div>1000</div>
+      <div class="item">
+        <b>Укладка вечерняя</b> коктейльная (кудри,гофре,утюжок)
+      </div>
+      <div class="price">4500</div>
 
-      <div>Укладка вечерняя коктейльная (кудри,гофре,утюжок)</div>
-      <div>4500</div>
+      <div class="item"><b>Укладка</b> вечерняя/свадебная</div>
+      <div class="price">от 7000</div>
 
-      <div>Укладка вечерняя/свадебная</div>
-      <div>от 7000</div>
+      <div class="item"><b>Укладка</b> вечерняя/свадебная</div>
+      <div class="price">от 7000</div>
 
-      <div>Укладка вечерняя/свадебная</div>
-      <div>от 7000</div>
+      <div class="item"><b>Укладка фен</b> Короткие</div>
+      <div class="price">1650</div>
 
-      <div>Укладка фен Короткие</div>
-      <div>1650</div>
+      <div class="item"><b>Укладка фен</b> Средние</div>
+      <div class="price">1950</div>
 
-      <div>Укладка фен Средние</div>
-      <div>1950</div>
+      <div class="item"><b>Укладка фен</b> Длинные</div>
+      <div class="price">2500</div>
 
-      <div>Укладка фен Длинные</div>
-      <div>2500</div>
+      <div class="item"><b>Укладка фен</b> От 45см</div>
+      <div class="price">2900</div>
 
-      <div>Укладка фен От 45см</div>
-      <div>2900</div>
+      <div class="item"><b>Укладка локоны</b> на каре</div>
+      <div class="price">2500</div>
 
-      <div>Укладка по форме Короткие</div>
-      <div>950</div>
+      <div class="item">
+        <b>Укладка вечерняя</b> коктейльная (кудри, гофре, утюжок) Средние
+      </div>
+      <div class="price">3300</div>
 
-      <div>Укладка по форме Средние</div>
-      <div>1100</div>
+      <div class="item">
+        <b> Укладка вечерняя</b> коктейльная (кудри, гофре, утюжок) Длинная
+      </div>
+      <div class="price">4200</div>
 
-      <div>Укладка по форме Длинные</div>
-      <div>1300</div>
+      <div class="item"><b>Прическа </b>вечерняя</div>
+      <div class="price">от 4000 - 5000</div>
 
-      <div>Укладка От 45см</div>
-      <div>1500</div>
+      <div class="item"><b>Репетиция прически</b></div>
+      <div class="price">3000</div>
 
-      <div>Укладка локоны на каре</div>
-      <div>2500</div>
+      <div class="item"><b>Накрутка «Дреды»</b> Средние</div>
+      <div class="price">2750</div>
 
-      <div>Укладка вечерняя коктейльная (кудри, гофре, утюжок) Средние</div>
-      <div>3300</div>
+      <div class="item"><b>Накрутка «Дреды»</b> Длинные</div>
+      <div class="price">3000</div>
 
-      <div>Укладка вечерняя коктейльная (кудри, гофре, утюжок) Длинная</div>
-      <div>4200</div>
+      <div class="item"><b>Укладка нарощенных волос</b> Средние</div>
+      <div class="price">2300</div>
 
-      <div>Прическа вечерняя</div>
-      <div>от 4000 - 5000</div>
+      <div class="item"><b>Укладка нарощенных волос</b> Длинные</div>
+      <div class="price">2900</div>
 
-      <div>Репетиция прически</div>
-      <div>3000</div>
+      <div class="item"><b>Укладка нарощенных волос</b>От 45см</div>
+      <div class="price">3500</div>
 
-      <div>Укладка «Дреды» Средние</div>
-      <div>2750</div>
+      <div class="item"><b>Кудри ангела</b>(афро-кудри) Средние</div>
+      <div class="price">3800</div>
 
-      <div>Укладка «Дреды» Длинные</div>
-      <div>3000</div>
+      <div class="item"><b>Кудри ангела</b>(афро-кудри) Длинные</div>
+      <div class="price">4800</div>
 
-      <div>Укладка нарощенных волос Средние</div>
-      <div>2300</div>
+      <div class="item"><b>Кудри ангела</b>(афро-кудри) От 45см</div>
+      <div class="price">5500</div>
 
-      <div>Укладка нарощенных волос Длинные</div>
-      <div>2900</div>
+      <div class="item"><b>Окрашивание волос в один тон</b> Короткие</div>
+      <div class="price">от 4250</div>
 
-      <div>Укладка нарощенных волос От 45см</div>
-      <div>3500</div>
+      <div class="item"><b>Окрашивание волос в один тон</b> Средние</div>
+      <div class="price">от 4850</div>
 
-      <div>Кудри ангела Средние</div>
-      <div>3800</div>
+      <div class="item"><b>Окрашивание волос в один тон</b> Длинные</div>
+      <div class="price">от 5700</div>
 
-      <div>Кудри ангела Длинные</div>
-      <div>4800</div>
+      <div class="item"><b>Окрашивание волос в один тон</b> От 45см</div>
+      <div class="price">от 6750</div>
 
-      <div>Кудри ангела От 45см</div>
-      <div>5500</div>
+      <div class="item"><b>Камуфляж</b> бороды</div>
+      <div class="price">1000</div>
 
-      <div>Афро-кудри</div>
-      <div>6500</div>
+      <div class="item"><b>Камуфляж</b> седины</div>
+      <div class="price">2200</div>
 
-      <div>Косы борцовки</div>
-      <div>2000</div>
+      <div class="item"><b>Мелирование на фольгу</b> Частично (2-10 пряди)</div>
+      <div class="price">от 2800</div>
 
-      <div>Окрашивание волос в один тон Короткие</div>
-      <div>4250</div>
+      <div class="item"><b>Мелирование на фольгу</b> Средние</div>
+      <div class="price">от 3800</div>
 
-      <div>Окрашивание волос в один тон Средние</div>
-      <div>4850</div>
+      <div class="item"><b>Мелирование на фольгу</b>Длинные</div>
+      <div class="price">от 5250</div>
 
-      <div>Окрашивание волос в один тон Длинные</div>
-      <div>5700</div>
+      <div class="item"><b>Мелирование на фольгу</b> От 45 см</div>
+      <div class="price">от 5900</div>
 
-      <div>Окрашивание волос в один тон От 45см</div>
-      <div>6750</div>
+      <div class="item"><b>Химическая завивка</b> Короткие</div>
+      <div class="price">от 4400</div>
+      <div class="item"><b>Химическая завивка</b> Средние</div>
+      <div class="price">от 6300</div>
+      <div class="item"><b>Химическая завивка</b>Длинный</div>
+      <div class="price">от 15400</div>
+      <div class="item"><b>Химическая завивка</b> От 45 см</div>
+      <div class="price">от 17000</div>
+      <div class="item">
+        <b>Химическая завивка</b> временного действия Короткие
+      </div>
+      <div class="price">от 5600</div>
+      <div class="item">
+        <b>Химическая завивка</b> временного действия Средние
+      </div>
+      <div class="price">от 6800</div>
 
-      <div>Дополнительное применение красителя в услуге До 30г</div>
-      <div>400</div>
+      <div class="item"><b>Предпигментирование</b> Короткие</div>
+      <div class="price">от 750</div>
 
-      <div>Дополнительное применение красителя в услуге До 50г</div>
-      <div>600</div>
+      <div class="item"><b>Предпигментирование</b> Средние</div>
+      <div class="price">от 850</div>
 
-      <div>Комбинированное окрашивание Короткие</div>
-      <div>4650</div>
+      <div class="item"><b>Предпигментирование</b> Длинные</div>
+      <div class="price">от 1000</div>
 
-      <div>Комбинированное окрашивание Средние</div>
-      <div>5250</div>
+      <div class="item"><b>Предпигментирование</b> От 45см</div>
+      <div class="price">от 1200</div>
 
-      <div>Комбинированное окрашивание Длинные</div>
-      <div>6200</div>
+      <div class="item"><b>Эйр Тач базовый</b> Средние</div>
+      <div class="price">от 10500</div>
 
-      <div>Комбинированное окрашивание От 45см</div>
-      <div>7150</div>
+      <div><b>Эйр Тач базовый</b> Длинные</div>
+      <div class="price">от 15600</div>
 
-      <div>Камуфляж бороды</div>
-      <div>1000</div>
+      <div class="item"><b>Эйр Тач базовый</b> От 45 см</div>
+      <div class="price">от 18700</div>
 
-      <div>Камуфляж седины</div>
-      <div>2200</div>
+      <div class="item"><b>Эйр Тач усложненный</b> Средние</div>
+      <div class="price">от 12000</div>
 
-      <div>Мелирование на фольгу Частично (2-10 пряди)</div>
-      <div>2500 + 300</div>
+      <div class="item"><b>Эйр Тач усложненный</b> Длинные</div>
+      <div class="price">от 17600</div>
 
-      <div>Мелирование на фольгу Средние</div>
-      <div>3500 + 300</div>
+      <div class="item"><b>Эйр Тач усложненный</b> От 45 см</div>
+      <div class="price">от 20700</div>
 
-      <div>Мелирование на фольгу Длинные</div>
-      <div>4900 + 350</div>
+      <div class="item"><b>Эйр Тач затемненный</b> Средние</div>
+      <div class="price">от 11800</div>
 
-      <div>Мелирование на фольгу От 45 см</div>
-      <div>5500 + 400</div>
+      <div class="item"><b>Эйр Тач затемненный</b> Длинные</div>
+      <div class="price">от 17400</div>
 
-      <div>Бронирование волос Средние</div>
-      <div>6500 + 500</div>
+      <div class="item"><b>Эйр Тач затемненный</b> От 45 см</div>
+      <div class="price">от 20500</div>
 
-      <div>Бронирование волос Длинные</div>
-      <div>8500+600</div>
+      <div class="item">
+        <b> Восстанавливающий уход</b> Restrucyuring (By FAMA) Средние
+      </div>
+      <div class="price">от 1000</div>
 
-      <div>Бронирование волос От 45 см</div>
-      <div>10000 + 700</div>
+      <div class="item">
+        <b> Восстанавливающий уход</b>Restrucyuring (By FAMA) Длинные
+      </div>
+      <div class="price">от 1300</div>
+      <div class="item"><b>Реконструкция</b> волос</div>
+      <div class="price">от 1500</div>
 
-      <div>Обесцвечивание Короткие (BY FAMA MATRIX)</div>
-      <div>2100 + 300</div>
+      <div class="item"><b>Жизненная сила (Lebel)</b> Средние</div>
+      <div class="price">от 4200</div>
 
-      <div>Обесцвечивание (BY FAMA MATRIX) Средние</div>
-      <div>2600 + 350</div>
+      <div class="item"><b>Жизненная сила (Lebel)</b> Длинные</div>
+      <div class="price">от 4600</div>
 
-      <div>Обесцвечивание (BY FAMA MATRIX) Длинные</div>
-      <div>3600 + 400</div>
+      <div class="item"><b>Жизненная сила (Lebel)</b>от 45см</div>
+      <div class="price">от 5400</div>
 
-      <div>Обесцвечивание (BY FAMA MATRIX) От 45 см</div>
-      <div>4100 + 500</div>
+      <div class="item">
+        <b>Абсолютное счастье для волос (Lebel) </b>Средние
+      </div>
+      <div class="price">от 5050</div>
 
-      <div>Обесцвечивание (REDKEN WELLA) Короткие</div>
-      <div>2500 + 300</div>
+      <div class="item">
+        <b>Абсолютное счастье для волос (Lebel)</b> Длинные
+      </div>
+      <div class="price">от 6050</div>
 
-      <div>Обесцвечивание (REDKEN WELLA) Средние</div>
-      <div>2900 + 350</div>
-
-      <div>Обесцвечивание (REDKEN WELLA) Длинные</div>
-      <div>3900 + 400</div>
-
-      <div>Обесцвечивание (REDKEN WELLA) От 45 см</div>
-      <div>4500 + 500</div>
-
-      <div>Предпигментирование Короткие</div>
-      <div>750</div>
-
-      <div>Предпигментирование Средние</div>
-      <div>850</div>
-
-      <div>Предпигментирование Длинные</div>
-      <div>1000</div>
-
-      <div>Предпигментирование От 45см</div>
-      <div>1200</div>
-
-      <div>Эйр Тач базовый Средние</div>
-      <div>10000 + 500</div>
-
-      <div>Эйр Тач базовый Длинные</div>
-      <div>15000 + 600</div>
-
-      <div>Эйр Тач базовый От 45 см</div>
-      <div>18000 + 700</div>
-
-      <div>Эйр Тач усложненный Средние</div>
-      <div>11500 + 500</div>
-
-      <div>Эйр Тач усложненный Длинные</div>
-      <div>17000 + 600</div>
-
-      <div>Эйр Тач усложненный От 45 см</div>
-      <div>20000 + 700</div>
-
-      <div>Эйр Тач затемненный Средние</div>
-      <div>11500 + 300</div>
-
-      <div>Эйр Тач затемненный Длинные</div>
-      <div>17000 + 400</div>
-
-      <div>Эйр Тач затемненный От 45 см</div>
-      <div>20000 + 500</div>
-
-      <div>Сложное окрашивание растяжка от Магии Искусства Средние</div>
-      <div>6700 + 300</div>
-
-      <div>Сложное окрашивание растяжка от Магии Искусства Длинные</div>
-      <div>8200 + 400</div>
-
-      <div>Сложное окрашивание растяжка от Магии Искусства От 45 см</div>
-      <div>9100 + 500</div>
-
-      <div>Восстанавливающий уход Restrucyuring (By FAMA) Средние</div>
-      <div>1000</div>
-
-      <div>Восстанавливающий уход Restrucyuring (By FAMA) Длинные</div>
-      <div>1300</div>
-
-      <div>Лечение для волос Шот (REDKEN) Средние</div>
-      <div>1900</div>
-
-      <div>Лечение для волос Шот (REDKEN) Длинные</div>
-      <div>2500</div>
-
-      <div>Лечение для волос Шот (REDKEN) от 45см</div>
-      <div>5400</div>
-
-      <div>Жизненная сила (Lebel) Средние</div>
-      <div>4200</div>
-
-      <div>Жизненная сила (Lebel) Длинные</div>
-      <div>4600</div>
-
-      <div>Жизненная сила (Lebel) от 45см</div>
-      <div>5400</div>
-
-      <div>Абсолютное счастье для волос (Lebel) Средние</div>
-      <div>5050</div>
-
-      <div>Абсолютное счастье для волос (Lebel) Длинные</div>
-      <div>6050</div>
-
-      <div>Абсолютное счастье для волос (Lebel) от 45см</div>
-      <div>6550</div>
-
-      <div>Биостимуляция кожи головы и волос (Sointera)</div>
-      <div>2500</div>
+      <div class="item">
+        <b>Абсолютное счастье для волос (Lebel)</b> от 45см
+      </div>
+      <div class="price">от 6550</div>
+      <div class="item">
+        <b
+          >Для уточнения сложности работы и цены предварительная консультация
+          обязательна!</b
+        >
+      </div>
     </div>
   </body>
 </html>
